Add authentication to OpenAPI annotations
