# ProcessMaker/Http/Controllers/Api/swagger-v3.php
@@ -1,4 +1,4 @@
-<?php
+<?php 
 /**
  * @OA\OpenApi(
  *     @OA\Info(
@@ -13,6 +13,17 @@
  *             url="http://www.apache.org/licenses/LICENSE-2.0.html"
  *         )
  *     ),
- *     @OA\Server(url=API_HOST)
+ *     @OA\Server(url=API_HOST),
+ *     @OA\Components(
+ *         @OA\SecurityScheme(
+ *             securityScheme="pm-api",
+ *             type="http",
+ *             scheme="bearer",
+ *         ),
+ *         @OA\Schema(
+ *           schema="metadata",
+ *           @OA\Property(property="per_page", type="integer"),
+ *         )
+ *     ),
  * )
  */
